feat: integrate services with env-driven eureka cluster and gateway hardening